# uav_path_planning

./: CMakeLists.txt  README.md  gazebo_xml_test  package.xml  readXML.py  requirements.txt  setup.py  waypoints_2D.p
benchmarks/: baumann_settings  classification_benchmark.csv
benchmarks/scenarios/2d/: 2d_scenario.xml  2d_scenario_final.xml  2d_scenario_final_2.xml  2d_scenario_final_3.xml  benchmark_2d.launch  benchmark_2d_alt.launch  benchmark_2d_final.launch  waypoints.p  waypoints_2D.p
benchmarks/scenarios/3d/: 3d_1.world  3d_1.yaml  3d_2.world  3d_2.yaml  3d_3.world  3d_3.yaml  3d_3_V2.world  3d_3_V3.world  3d_3_V4.world  baumann_benchmark_3d_1.launch  baumann_benchmark_3d_2.launch  baumann_benchmark_3d_3.launch  benchmark_3d.launch  benchmark_3d_1.launch  benchmark_3d_2.launch  benchmark_3d_3.launch  classification_3d.csv  waypoints.p  waypoints_3D.p
benchmarks/scenarios/local_minima/: local_minimum_their_drone.xml
examples/: funcAsArgument.py
examples/gazebo_worlds/: 3d_scenario.xml  gazebo_3d_1.xml  gazebo_BunchOfBoxes.xml  gazebo_Corners.xml  gazebo_OneBox.xml  gazebo_ThreeHighBoxes.xml  gazebo_local_minima_1.xml  gazebo_local_minima_2.xml  gazebo_local_minima_3.xml  gazebo_local_minima_4.xml  local_minimum_scenario.xml
examples/global_waypoints/: 3d_1_wpts.p  bunch_of_boxes_wpts.p
launch/: path_planner_01.launch  path_planner_local_minima_1.launch  path_planner_local_minima_2.launch  path_planner_local_minima_3.launch  path_planner_local_minima_4.launch  path_planner_one_box.launch  path_planner_yaw_test.launch
launch/benchmark_launch/: local_planner_sitl_3cam.launch
launch/launch_files/: path_planner_01.launch  path_planner_3d_1.launch
msg/: MultiArray.msg  obstacleListMsg.msg  obstacleMsg.msg  twodimarray.msg
nodes/: global_path_node  local_path_planner_node  obstacle_map_node  obstacle_sensor_node  path_logger_node  path_planning_node  setup_path_logger_for_px4_node
scripts/: SensorModule.py  mavros_path_planning_test.py
src/: offb_node.cpp
src/py_uav_path_planning/: __init__.py
srv/: PotentialService.srv  potential_field_msg.srv
(+50 files in other folders)
